fix spacing on trending show bar

--- a/app/assets/stylesheets/show_show_page.scss
+++ b/app/assets/stylesheets/show_show_page.scss
@@ -74,6 +74,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 5px 0;
   background-color: #fff7cd;
 }
 
